fix: carosello e mediaquery overflow

--- a/Homepage/media/media-XR.css
+++ b/Homepage/media/media-XR.css
@@ -11,6 +11,7 @@
 
     body {
         padding: 1%;
+        overflow-x: hidden;
     }
 
     .topbar__leftcontainer {
@@ -255,6 +256,22 @@
         font-size: 1rem;
     }
 
+    /*----------------------- CAROSELLO ------------------------------------*/
+    .s2picture>picture>img{
+        width:18rem;
+        height:15rem;
+    }
+
+    
+    .s2picture{
+        height: 15rem;
+
+    }
+
+    .s2picture-trail{
+        height: 15rem;
+        
+    }
     /*----------------------- CAROSELLO ------------------------------------*/
     /*----------------------- SECTION THREE  ------------------------------*/
 
